# henry_academy_class

./: README.md
AI_Engineering/course1_prompt_engineering/: .gitignore  README.md
AI_Engineering/course1_prompt_engineering/clase1/: .env.example  README.md  graph.py  langgraph.json  main.py  prompts.py  pyproject.toml  pyrightconfig.json  schemas.py  settings.py
AI_Engineering/course1_prompt_engineering/clase2/: README.md  graph.py  langgraph.json  main.py  prompts.py  pyproject.toml  schemas.py
AI_Engineering/course1_prompt_engineering/clase3/: README.md  graph.py  langgraph.json  main.py  prompts.py  pyproject.toml  schemas.py  settings.py
AI_Engineering/course1_prompt_engineering/clase4/: README.md  graph.py  langgraph.json  main.py  prompts.py  pyproject.toml  schemas.py  settings.py
AI_Engineering/course1_prompt_engineering/clase5/: README.md  RETO.md  graph.py  langgraph.json  logger.py  main.py  prompts.py  pyproject.toml  schemas.py  tools.py
AI_Engineering/course1_prompt_engineering/comparativa_llms/: .env.example  README.md  graph.py  langgraph.json  main.py  prompts.py  pyproject.toml  schemas.py  settings.py
Python/: 01_intro_python.py
