[project]
name = "clase1-fundamentos"
version = "0.1.0"
description = "Clase 1 — Fundamentos de prompting con LangChain y LangGraph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "langgraph-cli[inmem]>=0.1.55",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

# Sin [build-system]: uv trata el proyecto como una "aplicación", no como una
# librería instalable. Así `uv sync` solo crea el entorno con las dependencias
# y ejecutamos los módulos directamente (igual que en day1), sin empaquetar.
[tool.uv]
package = false
