[project]
name = "clase2-prompt-chaining"
version = "0.1.0"
description = "Clase 2 — Prompt Chaining con LangGraph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "langgraph-cli[inmem]>=0.1.55",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
package = false
