[project]
name = "clase5-react"
version = "0.1.0"
description = "Clase 5 — Agente ReAct con herramientas en LangGraph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "langgraph-cli[inmem]>=0.1.55",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
package = false
